// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`store > with initial steps > should have initiated a new store 1`] = `
{
  "action": "init",
  "controlled": false,
  "index": 0,
  "lifecycle": "init",
  "origin": null,
  "size": 6,
  "status": "ready",
}
`;

exports[`store > without initial values > should be able to add steps 1`] = `
{
  "action": "start",
  "controlled": false,
  "index": 0,
  "lifecycle": "init",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "close" 1`] = `
{
  "action": "close",
  "controlled": false,
  "index": 2,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "close" with origin "keyboard 1`] = `
{
  "action": "close",
  "controlled": false,
  "index": 4,
  "lifecycle": "complete",
  "origin": "keyboard",
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "close" with origin "overlay" 1`] = `
{
  "action": "close",
  "controlled": false,
  "index": 3,
  "lifecycle": "complete",
  "origin": "overlay",
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "go" [2nd step] 1`] = `
{
  "action": "go",
  "controlled": false,
  "index": 2,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "go" [3rd step] 1`] = `
{
  "action": "go",
  "controlled": false,
  "index": 1,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "go" with a number higher that the steps length and finish the tour 1`] = `
{
  "action": "go",
  "controlled": false,
  "index": 10,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "finished",
}
`;

exports[`store > without initial values > should handle "next" [2nd step] 1`] = `
{
  "action": "next",
  "controlled": false,
  "index": 1,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "next" [3rd step] 1`] = `
{
  "action": "next",
  "controlled": false,
  "index": 2,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "next" [4th step] 1`] = `
{
  "action": "next",
  "controlled": false,
  "index": 3,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "next" [5th step] 1`] = `
{
  "action": "next",
  "controlled": false,
  "index": 4,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "next" again but the tour has finished 1`] = `
{
  "action": "next",
  "controlled": false,
  "index": 5,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "next" again but there's no change to the store 1`] = `
{
  "action": "next",
  "controlled": false,
  "index": 6,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "open" 1`] = `
{
  "action": "update",
  "controlled": false,
  "index": 4,
  "lifecycle": "tooltip",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "prev" [1st step] 1`] = `
{
  "action": "prev",
  "controlled": false,
  "index": 0,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "prev" but no changes [1st step] 1`] = `
{
  "action": "prev",
  "controlled": false,
  "index": 0,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "reset" 1`] = `
{
  "action": "reset",
  "controlled": false,
  "index": 0,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "ready",
}
`;

exports[`store > without initial values > should handle "reset" to restart 1`] = `
{
  "action": "reset",
  "controlled": false,
  "index": 0,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "start" with custom index and lifecycle 1`] = `
{
  "action": "start",
  "controlled": false,
  "index": 2,
  "lifecycle": "init",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "update" the lifecycle to beacon 1`] = `
{
  "action": "prev",
  "controlled": false,
  "index": 0,
  "lifecycle": "beacon",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "update" the lifecycle to beacon 2`] = `
{
  "action": "next",
  "controlled": false,
  "index": 4,
  "lifecycle": "beacon",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle "update" the lifecycle to tooltip 1`] = `
{
  "action": "prev",
  "controlled": false,
  "index": 0,
  "lifecycle": "tooltip",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle \`start\` [1st step] 1`] = `
{
  "action": "start",
  "controlled": false,
  "index": 0,
  "lifecycle": "init",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle \`start\` [2nd step] 1`] = `
{
  "action": "start",
  "controlled": false,
  "index": 1,
  "lifecycle": "init",
  "origin": null,
  "size": 6,
  "status": "running",
}
`;

exports[`store > without initial values > should handle \`stop\` 1`] = `
{
  "action": "stop",
  "controlled": false,
  "index": 0,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "paused",
}
`;

exports[`store > without initial values > should handle \`stop\` again but with \`advance\` 1`] = `
{
  "action": "stop",
  "controlled": false,
  "index": 1,
  "lifecycle": "complete",
  "origin": null,
  "size": 6,
  "status": "paused",
}
`;

exports[`store > without initial values > should have initiated a new store 1`] = `
{
  "action": "init",
  "controlled": false,
  "index": 0,
  "lifecycle": "init",
  "origin": null,
  "size": 0,
  "status": "idle",
}
`;

exports[`store > without initial values > shouldn't be able to start without steps 1`] = `
{
  "action": "start",
  "controlled": false,
  "index": 0,
  "lifecycle": "init",
  "origin": null,
  "size": 0,
  "status": "waiting",
}
`;
